[gd_scene load_steps=2 format=3 uid="uid://bkq6fyiy48t8k"]

[ext_resource type="Script" uid="uid://c0chcmynsibvu" path="res://scripts/ui/hole_complete_ui.gd" id="1_jujj8"]

[node name="HoleCompleteUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1146.0
offset_bottom = 645.0
script = ExtResource("1_jujj8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48600003
anchor_top = 0.5
anchor_right = 0.48600003
anchor_bottom = 0.5
offset_left = -146.40001
offset_top = -139.5
offset_right = 146.59999
offset_bottom = 130.5
alignment = 1

[node name="ResultLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Birdie!"

[node name="StrokesLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "2 strokes on par 3"

[node name="NextButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Next Hole"
